# codecrafters-shell-rust

./: .gitignore  Cargo.toml  README.md
src/: auto_completion.rs  builtin.rs  command.rs  completer.rs  executable.rs  helper.rs  history.rs  main.rs  parse_input.rs  parser.rs  reader.rs  redirect.rs  tokenize.rs  trie.rs  utils.rs  validator.rs
src/builtin/: history.rs  mod.rs  type_.rs
