[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.87"

[dependencies]
# anyhow = "1.0.68"                                # error handling
bytes = "1.11.0"                                  # helps manage buffers
is_executable = "1.0.5"
lazy_static = "1.5.0"
regex = "1.12.2"
# thiserror = "1.0.38"                             # error handling
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
trie-rs = "0.4.2"
